<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        tools:context=".EmailSelector" >

    <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingTop="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:orientation="vertical"
            tools:context=".EmailSelector" >

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:text="@string/email_info"/>

        <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@android:color/darker_gray"/>
        
       <EditText                          
                android:id="@+id/email_field"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="you@gmail.com"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:textSize="25dp" />

        <LinearLayout 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:gravity="center"
                android:orientation="horizontal" >
            
            <Button
                    android:id="@+id/email_default"
                    android:layout_height="wrap_content"
                    android:layout_width="100dp"
                    android:text="@string/email_default_btn" />

            <Button
                    android:id="@+id/email_save"
                    android:layout_height="wrap_content"
                    android:layout_width="100dp"
                    android:text="@string/email_save_btn" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>

