<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        tools:context=".ItemViewer" >

    <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:orientation="vertical"
            tools:context=".ItemViewer" >

        <LinearLayout 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >

            <Button
                    android:id="@+id/flash_add_pic"
                    android:layout_height="wrap_content"
                    android:layout_width="150dp"
                    android:text="@string/flash_add_pic_btn" />

            <Button
                    android:id="@+id/flash_save"
                    android:layout_height="wrap_content"
                    android:layout_width="80dp"
                    android:text="@string/flash_save_btn" />

        </LinearLayout>

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:text="@string/flash_viewer_info"/>

        <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@android:color/darker_gray"/>

        <TextView
                android:id="@+id/item_ref"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="25sp"
                android:paddingBottom="15sp"/>

        <TextView
                android:id="@+id/item_price"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="25sp"
                android:paddingBottom="15sp"/>

        <TextView
                android:id="@+id/item_info"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="25sp"
                android:paddingBottom="15sp"/>
        
        <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@android:color/darker_gray"/>

        <LinearLayout 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:orientation="horizontal" >

            <ImageView
                    android:id="@+id/img_thumb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

        </LinearLayout>


    </LinearLayout>

</ScrollView>
